# mini-soulspace

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
ai/: README.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_auth_foundation.py  0002_soulbook_engine.py  0003_soul_memories.py  0004_memory_intelligence.py  0005_soulbook_personalization.py
backend/app/: __init__.py  main.py  spa.py
backend/app/analytics/: __init__.py
backend/app/api/: __init__.py  router.py
backend/app/auth/: __init__.py  cookies.py  dependencies.py
backend/app/brains/: __init__.py  base.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/diary/: __init__.py
backend/app/legal/: __init__.py  content.py
backend/app/memory/: __init__.py
backend/app/models/: __init__.py  auth.py  memory.py  preferences.py  soulbook.py  user.py
backend/tests/: conftest.py  test_auth.py  test_context_builder.py  test_conversation_composer.py  test_guardian.py  test_input_receiver.py  test_meaning_intent.py  test_memory_intelligence.py  test_memory_retriever.py  test_memory_writer.py  test_mini_engine.py  test_mini_vision.py  test_orchestra_integration.py  test_prompt_builder.py  test_quality_checker.py  test_reflection_planner.py  test_security.py  test_soulbook_personalization.py  test_soulbooks.py  test_specialist_orchestrator.py  test_specialist_router.py  test_system.py
(+197 files in other folders)
